# autonomx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
agents/: pyproject.toml  requirements.txt
agents/autonomx_agents/: __init__.py  __main__.py  server.py
agents/autonomx_agents/agents/: __init__.py  architect.py  coder.py  model_manager.py  planner.py  product_owner.py  reviewer.py  tester.py
agents/autonomx_agents/core/: __init__.py  base_agent.py  config.py  message.py  registry.py
agents/autonomx_agents/grpc_services/: __init__.py  agent_servicer.py  event_publisher.py
agents/autonomx_agents/llm/: __init__.py  gateway.py
agents/autonomx_agents/llm/prompts/: __init__.py
agents/tests/: test_agents.py  test_core.py  test_grpc_servicer.py  test_llm_gateway.py  test_model_manager.py
config/: agents.yaml  llm-models.yaml  llm.yaml  pipelines.yaml
docker/: Dockerfile.agents  Dockerfile.api
docs/: API-REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  PLUGIN-GUIDE.md  QUICKSTART.md
protos/: agent_service.proto  code_execution_service.proto  common.proto  project_service.proto
scripts/: proto-gen.sh  setup-github.sh  setup.sh
src/: AutoNomX.sln
src/api/AutoNomX.Api/: AutoNomX.Api.csproj  Program.cs  appsettings.json
src/cli/AutoNomX.Cli/: AutoNomX.Cli.csproj  Program.cs  appsettings.json
src/core/AutoNomX.Application/: AutoNomX.Application.csproj  DependencyInjection.cs
src/core/AutoNomX.Domain/: AutoNomX.Domain.csproj
src/core/AutoNomX.Infrastructure/: AutoNomX.Infrastructure.csproj  (+1 more)
(+93 files in other folders)
